@@ -1,0 +1,4 @@
+# GDL2 constants
+#
+
+# None
